Add source code link as footer

--- a/dataProjects.html
+++ b/dataProjects.html
@@ -77,6 +77,13 @@
       <p>Data project by the Essie Justice Group, a nonprofit organization of women with incarcerated loved ones "taking on the rampant injustices caused by mass incarceration" (<a href="sources.html#14">Clayton-Johnson et al.</a>). This report was created in response to COVID-19 conditions in jails and prisons and created a survey to send out to incarcerated peoples loved ones to get concrete data that can "illustrate what was happening behind bars and buoy the efforts of advocates across the country fighting to free incarcerated people amidst the COVID-19 pandemic" (<a href="sources.html#14">Clayton-Johnson et al.</a>).</p>
       <p>I chose to link this project, as it is an example of an abolitionist framed data project, and an example of a project which quantifies harms of the carceral state without relying on carceral data (i.e. data collected directly by police or prisons, with the potential for intentional manipulation or other data quality issues). </p> <a href="https://pubmed.ncbi.nlm.nih.gov/34352850/">Abortion Access for Incarcerated People: Incidence of Abortion and Policies at U.S. Prisons and Jails (<a href="sources.html#43">Sufrin</a>)</a>
     </div>
+    <div class="row">
+      <div class="footer">
+        <ul>
+          <li><a href="https://github.com/mstites/policeDataAccessibility">Source Code</a></li>
+        </ul>
+      </div>
+    </div>
   </div>
 </body>
 
