--- a/policeData.html
+++ b/policeData.html
@@ -107,6 +107,14 @@
         <li><a href="https://docs.google.com/presentation/d/1jea-8ivPxqONKaP_eSdsUnzUnE-hP2PkQsCE_sO3eHg/edit#slide=id.p">Sarah Ryley Public Records Request Guide</a> (<a href="sources.html#30">Ryley, "Public Data Day"</a>)</li>
       </ul>
     </div>
+    <div class="row">
+      <div class="footer">
+        <ul>
+          <li><a href="https://github.com/mstites/policeDataAccessibility">Source Code</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
