--- a/policeDataNotes.html
+++ b/policeDataNotes.html
@@ -46,6 +46,14 @@
       <p>However, I was ultimately unable to find the sources I desired to answer my questions regarding policy surrounding police data acquisition. I was able to find ample information on federal data processes, under FOIA (Freedom of Information Act - key resources listed on the <a href="policeData.html">Police Source Data page</a>). But I was unable to find reputable, up-to-date, and applicable sources for general information on state freedom of information legislation. It is worth noting that if you are looking to find details for one specific state, the legislation should be publicly accessible for your review. Additionally, many states have public records requests portals with guidance on how to submit requests (see the <a href="https://www.mass.gov/topics/public-records-requests">MA portal</a> as an example). While it is great that these government resources exist, my research results showed that the reality of acquiring data doesn’t always match the expectations. This is why I was really hoping to find an external, third party piece that can interpret the legislation more based in reality and/or at a more nation wide level.</p>
       <p>While I am disappointed I was unable to find this information, this lack of accessible information in itself is an important insight. This lack of information communicates that there is yet another barrier in place of acquiring policing data. Without readily available information on the policies surrounding state policy, that is in a form that is relevant to policing data and interpretable without needing to pour through page upon page of legislation, people are kept in the dark from what police are supposed to be doing regarding the openness of their information. This is yet another way that police are unable to be properly held accountable for their actions. Without the knowledge of what police should be doing according to legislation, people submitting records requests don’t have the context or tools in the scenario that something doesn't go perfectly.</p>
     </div>
+    <div class="row">
+      <div class="footer">
+        <ul>
+          <li><a href="https://github.com/mstites/policeDataAccessibility">Source Code</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
