--- a/sources.html
+++ b/sources.html
@@ -104,6 +104,13 @@
         <li id="41">“Why.” Carceral Tech Resistance Network, 30 Mar. 2020, https://www.carceral.tech/why.</li>
       </ol>
     </div>
+    <div class="row">
+      <div class="footer">
+        <ul>
+          <li><a href="https://github.com/mstites/policeDataAccessibility">Source Code</a></li>
+        </ul>
+      </div>
+    </div>
 </body>
 
 </html>
