--- a/404.html
+++ b/404.html
@@ -57,6 +57,13 @@
       <p>The page you are looking for cannot be found.</p>
     </div>
   </div>
+  <div class="row">
+    <div class="footer">
+      <ul>
+        <li><a href="https://github.com/mstites/policeDataAccessibility">Source Code</a></li>
+      </ul>
+    </div>
+  </div>
 </body>
 
 </html>
