Change "Source Code" link to "Source"

--- a/sources.html
+++ b/sources.html
@@ -107,7 +107,7 @@
     <div class="row">
       <div class="footer">
         <ul>
-          <li><a href="https://github.com/mstites/policeDataAccessibility">Source Code</a></li>
+          <li><a href="https://github.com/mstites/policeDataAccessibility">Source</a></li>
         </ul>
       </div>
     </div>
