--- a/data&abolition.html
+++ b/data&abolition.html
@@ -51,7 +51,7 @@
     <div class="row">
       <div class="footer">
         <ul>
-          <li><a href="https://github.com/mstites/policeDataAccessibility">Source Code</a></li>
+          <li><a href="https://github.com/mstites/policeDataAccessibility">Source</a></li>
         </ul>
       </div>
     </div>
